--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,20 @@
   "require": {
     "php": "^7.4",
     "doctrine/dbal": "^2.10",
-    "laravel/framework": "^7.21",
+    "laravel/framework": "^8.0",
     "laravel/tinker": "^2.4",
+    "laravel/ui": "^3.0",
     "superbalist/laravel-google-cloud-storage": "^2.2",
     "symfony/yaml": "^4.4",
-    "ronasit/laravel-helpers": "1.5.*@beta"
+    "ronasit/laravel-helpers": "1.5.*@beta",
+    "laravel/legacy-factories": "^1.1",
+    "facade/ignition": "^2.3.6",
+    "nunomaduro/collision": "^5.0"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "^1.4",
-    "phpunit/phpunit": "^8.5",
+    "phpunit/phpunit": "^9.0",
     "fruitcake/laravel-cors": "^2.0",
     "ronasit/laravel-entity-generator": ">=1.3.4",
     "ronasit/laravel-swagger": ">=1.6@beta",
@@ -31,7 +35,8 @@
       "database"
     ],
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Database\\Seeders\\": "database/seeders/"
     }
   },
   "autoload-dev": {
