--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -35,7 +35,7 @@ worker:
     max: 6
     CPULimit: 70
     MemoryLimit: 1568Mi
-  cmd: "php /app/artisan queue:work --sleep=3 --tries=3 --queue=default --memory=128"
+  cmd: "php /app/artisan queue:work --sleep=3 --tries=3 --queue=default,mails --memory=128"
 
 migrate:
   enabled: true
