--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "laravel/ui": "^3.0",
     "superbalist/laravel-google-cloud-storage": "^2.2",
     "symfony/yaml": "^4.4",
-    "ronasit/laravel-helpers": "1.5.*@beta",
+    "ronasit/laravel-helpers": "2.0.0-beta",
     "laravel/legacy-factories": "^1.1",
     "facade/ignition": "^2.3.6",
     "nunomaduro/collision": "^5.0"
@@ -26,8 +26,8 @@
     "phpunit/phpunit": "^9.0",
     "fruitcake/laravel-cors": "^2.0",
     "ronasit/laravel-entity-generator": ">=1.3.4",
-    "ronasit/laravel-swagger": ">=1.6@beta",
-    "ronasit/laravel-remote-data-collector": ">=1.6@beta",
+    "ronasit/laravel-swagger": ">=1.6",
+    "ronasit/laravel-remote-data-collector": "1.7.*",
     "barryvdh/laravel-ide-helper": "^2.7"
   },
   "autoload": {
