--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,6 @@
   "require": {
     "php": "^7.4",
     "doctrine/dbal": "^2.10",
-    "facade/ignition": "^2.3.6",
-    "fakerphp/faker": "^1.19",
     "laravel/framework": "^8.0",
     "laravel/legacy-factories": "^1.1",
     "laravel/tinker": "^2.4",
@@ -28,7 +26,9 @@
     "ronasit/laravel-entity-generator": ">=1.3.4",
     "ronasit/laravel-swagger": ">=1.6",
     "ronasit/laravel-remote-data-collector": "1.7.*",
-    "barryvdh/laravel-ide-helper": "^2.7"
+    "barryvdh/laravel-ide-helper": "^2.7",
+    "facade/ignition": "^2.3.6",
+    "fakerphp/faker": "^1.19"
   },
   "autoload": {
     "classmap": [
