--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "fruitcake/laravel-cors": "^2.0",
     "ronasit/laravel-entity-generator": ">=1.3.4",
     "ronasit/laravel-swagger": ">=1.6",
-    "ronasit/laravel-remote-data-collector": "1.7.*",
+    "ronasit/laravel-remote-data-collector": "2.0.2-beta",
     "barryvdh/laravel-ide-helper": "^2.7",
     "fakerphp/faker": "^1.19"
   },
