--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,24 @@
     "php": "^7.4",
     "doctrine/dbal": "^2.10",
     "facade/ignition": "^2.3.6",
-    "laravel/framework": "^8.0",
+    "laravel/framework": "^8.83.11",
     "laravel/legacy-factories": "^1.1",
     "laravel/tinker": "^2.4",
     "laravel/ui": "^3.0",
     "nunomaduro/collision": "^5.0",
-    "ronasit/laravel-helpers": "2.0.1-beta",
-    "superbalist/laravel-google-cloud-storage": "^2.2"
+    "ronasit/laravel-helpers": "2.0.3-beta",
+    "superbalist/laravel-google-cloud-storage": "^2.2",
+    "nikic/php-parser": "^4.12"
   },
   "require-dev": {
+    "barryvdh/laravel-ide-helper": "^2.7",
+    "fakerphp/faker": "^1.19",
+    "fruitcake/laravel-cors": "^2.0",
     "mockery/mockery": "^1.4",
     "phpunit/phpunit": "^9.0",
-    "fruitcake/laravel-cors": "^2.0",
     "ronasit/laravel-entity-generator": ">=1.3.4",
-    "ronasit/laravel-swagger": ">=1.6",
-    "ronasit/laravel-remote-data-collector": "2.0.2-beta",
-    "barryvdh/laravel-ide-helper": "^2.7",
-    "fakerphp/faker": "^1.19"
+    "ronasit/laravel-swagger": "2.0.3-beta",
+    "tightenco/tlint": "^6.3"
   },
   "autoload": {
     "classmap": [
