#PRD73 updated ronasit/laravel-swagger

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ variables:
   CHART_VALUES: k8s/values.yaml
   DOCKER_CONTAINER_REGISTRY: gcr.io/ronas-it-development/${CI_PROJECT_NAME}-${CI_ENVIRONMENT_SLUG}
   APP_NAME: Laravel
-  DATA_COLLECTOR_KEY: laravel
+  SWAGGER_REMOTE_DRIVER_KEY: laravel
 
 include:
   - project: 'k8s-tools/charts/laravel'
