#52: set_redis_by_default

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_USERNAME=pguser
 DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 SESSION_DRIVER=file
 QUEUE_CONNECTION=sync
 
@@ -40,3 +40,5 @@ PUSHER_APP_SECRET=
 FRONTEND_URL=http://localhost
 
 DATA_COLLECTOR_KEY=Laravel
+
+REDIS_PORT=6379
