--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 QUEUE_CONNECTION=sync
 
 REDIS_HOST=redis
