--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "ronasit/laravel-entity-generator": ">=1.3.4",
     "ronasit/laravel-remote-data-collector": "2.0.2-beta",
     "barryvdh/laravel-ide-helper": "^2.7",
-    "fakerphp/faker": "^1.19"
+    "fakerphp/faker": "^1.19",
+    "ext-json": "*"
   },
   "autoload": {
     "classmap": [
