--- a/.env.dev
+++ b/.env.dev
@@ -36,6 +36,7 @@ PUSHER_APP_SECRET=
 
 FRONTEND_URL=
 
-DATA_COLLECTOR_KEY=
+LOCAL_DATA_COLLECTOR_PROD_PATH=/documentation.json
+LOCAL_DATA_COLLECTOR_TEMP_PATH=/tmp/documentation.json
 
 SWAGGER_DRIVER=remote
