--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ PUSHER_APP_SECRET=
 
 FRONTEND_URL=http://localhost
 
-DATA_COLLECTOR_KEY=Laravel
+LOCAL_DATA_COLLECTOR_PROD_PATH=/documentation.json
+LOCAL_DATA_COLLECTOR_TEMP_PATH=/tmp/documentation.json
 
 SWAGGER_DRIVER=remote
