--- a/.env.dev
+++ b/.env.dev
@@ -36,4 +36,7 @@ PUSHER_APP_SECRET=
 
 FRONTEND_URL=
 
+LOCAL_DATA_COLLECTOR_PROD_PATH=/documentation.json
+LOCAL_DATA_COLLECTOR_TEMP_PATH=/tmp/documentation.json
+
 SWAGGER_DRIVER=remote
