#24:- add swager variables to env

--- a/.env.example
+++ b/.env.example
@@ -42,4 +42,6 @@ FRONTEND_URL=http://localhost
 LOCAL_DATA_COLLECTOR_PROD_PATH=/documentation.json
 LOCAL_DATA_COLLECTOR_TEMP_PATH=/tmp/documentation.json
 
+SWAGGER_REMOTE_DRIVER_KEY=Laravel
+
 SWAGGER_DRIVER=remote
