--- a/.env.dev
+++ b/.env.dev
@@ -39,4 +39,6 @@ FRONTEND_URL=
 LOCAL_DATA_COLLECTOR_PROD_PATH=/documentation.json
 LOCAL_DATA_COLLECTOR_TEMP_PATH=/tmp/documentation.json
 
+SWAGGER_REMOTE_DRIVER_KEY=
+
 SWAGGER_DRIVER=remote
