--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,16 @@
     "ronasit/laravel-helpers": "2.0.3-beta",
     "superbalist/laravel-google-cloud-storage": "^2.2",
     "nikic/php-parser": "^4.12",
-    "ronasit/laravel-swagger": ">=2.0.4-beta",
+    "ronasit/laravel-swagger": ">=2.0.4-beta"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.7",
     "brainmaestro/composer-git-hooks": "^2.8",
     "fakerphp/faker": "^1.19",
     "friendsofphp/php-cs-fixer": "^3.8",
-    "fruitcake/laravel-cors": "^2.0",
     "mockery/mockery": "^1.4",
     "phpunit/phpunit": "^9.5.21",
     "ronasit/laravel-entity-generator": ">=1.3.4",
-    "ronasit/laravel-swagger": "2.0.4-beta",
     "tightenco/tlint": "^6.3"
   },
   "autoload": {
