--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
     "laravel/tinker": "^2.4",
     "laravel/ui": "^3.0",
     "nunomaduro/collision": "^5.0",
-    "ronasit/laravel-helpers": "2.0.3-beta",
+    "ronasit/laravel-helpers": "^2.1",
     "ronasit/laravel-swagger": ">=2.0.4-beta",
-    "superbalist/laravel-google-cloud-storage": "^2.2"
+    "superbalist/laravel-google-cloud-storage": "^2.2",
+    "tymon/jwt-auth": "^1.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.4",
