feat: increase composer php version, fix refresh, add blacklist exception;
Refs: #29

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ FRONTEND_URL=http://localhost
 SWAGGER_REMOTE_DRIVER_KEY=Laravel
 
 SWAGGER_DRIVER=remote
+
+JWT_SECRET=
+JWT_SHOW_BLACKLIST_EXCEPTION=true
