--- a/.env.development
+++ b/.env.development
@@ -15,7 +15,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=redis
-QUEUE_CONNECTION=reds
+QUEUE_CONNECTION=redis
 
 REDIS_HOST=redis
 REDIS_PASSWORD=
