feat: update laravel Refs: #8

--- a/.env.local
+++ b/.env.local
@@ -28,7 +28,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 GOOGLE_CLOUD_STORAGE_BUCKET=ronasit-development
 GOOGLE_CLOUD_PROJECT_ID=ronas-it-development
 GOOGLE_CLOUD_KEY_FILE=gcs.key
