--- a/.env.dev.testing
+++ b/.env.dev.testing
@@ -29,7 +29,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
