--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,23 @@
   "require": {
     "php": "^8.1",
     "doctrine/dbal": "^2.10",
-    "facade/ignition": "^2.3.6",
     "fruitcake/laravel-cors": "^3.0",
-    "laravel/framework": "^8.0",
+    "laravel/framework": "^9.0",
     "laravel/legacy-factories": "^1.1",
+    "laravel/serializable-closure": "^1.2",
     "laravel/tinker": "^2.4",
     "laravel/ui": "^3.0",
-    "nunomaduro/collision": "^5.0",
+    "maatwebsite/excel": "^3.1",
+    "nunomaduro/collision": "^6.1",
     "php-open-source-saver/jwt-auth": "^1.4",
+    "psr/simple-cache": "^2.0",
     "ronasit/laravel-helpers": "^2.1",
     "ronasit/laravel-swagger": ">=2.0.4-beta",
-    "superbalist/laravel-google-cloud-storage": "^2.2"
+    "spatie/laravel-google-cloud-storage": "^2.0.5",
+    "spatie/laravel-ignition": "^1.0",
+    "symfony/http-client": "6.1.0",
+    "symfony/mailgun-mailer": "6.1.0",
+    "symfony/postmark-mailer": "6.1.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.4",
