--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "App\\Tests\\": "tests/"
+      "App\\Tests\\": "tests/",
+      "App\\Modules\\Media\\Tests\\": "app/Modules/Media/tests/"
     }
   },
   "scripts": {
