--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "fakerphp/faker": "^1.19",
     "friendsofphp/php-cs-fixer": "^3.8",
     "mockery/mockery": "^1.4",
+    "php-coveralls/php-coveralls": "^2.6",
     "phpunit/phpunit": "^9.5.21",
     "ronasit/laravel-entity-generator": ">=1.3.4",
     "tightenco/tlint": "^6.3"
