--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -10,10 +10,13 @@ jobs:
   test-with-coverage:
     runs-on: ubuntu-latest
     services:
-      postgres:
+      pgsql_test:
         image: postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: ""
+          POSTGRES_USER: forge
+          POSTGRES_DB: forge
+          POSTGRES_HOST_AUTH_METHOD: trust
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
