--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -9,6 +9,13 @@ on:
 jobs:
   test-with-coverage:
     runs-on: ubuntu-latest
+    env:
+      DB_CONNECTION: pgsql
+      DB_HOST: localhost
+      DB_PASSWORD: ""
+      DB_USERNAME: forge
+      DB_DATABASE: forge
+
     services:
       pgsql_test:
         image: postgres
@@ -17,6 +24,8 @@ jobs:
           POSTGRES_USER: forge
           POSTGRES_DB: forge
           POSTGRES_HOST_AUTH_METHOD: trust
+        ports:
+          - 5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -26,6 +35,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
+          extensions: pgsql
       - uses: actions/checkout@v3
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
