--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DB_CONNECTION: pgsql
-      DB_HOST: localhost
+      DB_HOST: postgres
       DB_PASSWORD: ""
       DB_USERNAME: forge
       DB_DATABASE: forge
 
     services:
-      pgsql_test:
+      postgres:
         image: postgres
         env:
           POSTGRES_PASSWORD: ""
@@ -41,6 +41,8 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Execute unit tests via PHPUnit with coverage
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+        env:
+          DB_PORT: ${{ job.services.postgres.ports[5432] }}
       - name: Upload coverage results to Coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
