--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "spatie/laravel-ignition": "^1.0",
     "symfony/http-client": "6.1.0",
     "symfony/mailgun-mailer": "6.1.0",
-    "symfony/postmark-mailer": "6.1.0"
+    "symfony/postmark-mailer": "6.1.0",
+    "ext-openssl": "*"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.7",
