--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "nunomaduro/collision": "^6.1",
     "php-open-source-saver/jwt-auth": "^2.1",
     "psr/simple-cache": "^2.0",
-    "ronasit/laravel-helpers": "^2.1",
+    "ronasit/laravel-helpers": "2.1",
     "ronasit/laravel-swagger": ">=2.0.4-beta",
     "spatie/laravel-google-cloud-storage": "^2.2",
     "spatie/laravel-ignition": "^1.0",
