test: cover InitCommand

--- a/tests/fixtures/InitCommandTest/env.development.yml
+++ b/tests/fixtures/InitCommandTest/env.development.yml
@@ -1,9 +1,9 @@
-APP_NAME=my-app
+APP_NAME="My App"
 APP_ENV=development
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://mysite.com
 
 DB_CONNECTION=pgsql
 DB_HOST=
