--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "type": "project",
   "require": {
     "php": "^8.1",
-    "doctrine/dbal": "^2.10",
+    "doctrine/dbal": "^3.6",
     "laravel/framework": "^9.0",
     "laravel/legacy-factories": "^1.1",
     "laravel/serializable-closure": "^1.2",
@@ -19,8 +19,8 @@
     "nunomaduro/collision": "^6.1",
     "php-open-source-saver/jwt-auth": "^2.1",
     "psr/simple-cache": "^2.0",
-    "ronasit/laravel-helpers": "2.1",
-    "ronasit/laravel-swagger": ">=2.0.4-beta",
+    "ronasit/laravel-helpers": "^2.5",
+    "ronasit/laravel-swagger": "^2.1",
     "spatie/laravel-google-cloud-storage": "^2.2",
     "spatie/laravel-ignition": "^1.0",
     "symfony/http-client": "6.1.0",
@@ -37,7 +37,7 @@
     "php-coveralls/php-coveralls": "^2.6",
     "php-mock/php-mock-phpunit": "^2.7",
     "phpunit/phpunit": "^9.5.21",
-    "ronasit/laravel-entity-generator": ">=1.3.4",
+    "ronasit/laravel-entity-generator": ">=2.0.4-beta",
     "tightenco/tlint": "^6.3",
     "ext-json": "*"
   },
