--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "nunomaduro/collision": "^6.1",
     "php-open-source-saver/jwt-auth": "^2.1",
     "psr/simple-cache": "^2.0",
-    "ronasit/laravel-helpers": "^2.5",
+    "ronasit/laravel-helpers": "dev-master",
     "ronasit/laravel-swagger": "^2.1",
     "spatie/laravel-google-cloud-storage": "^2.2",
     "spatie/laravel-ignition": "^1.0",
@@ -35,7 +35,7 @@
     "friendsofphp/php-cs-fixer": "^3.8",
     "mockery/mockery": "^1.4",
     "php-coveralls/php-coveralls": "^2.6",
-    "php-mock/php-mock-phpunit": "^2.7",
+    "php-mock/php-mock-phpunit": "^2.9",
     "phpunit/phpunit": "^9.5.21",
     "ronasit/laravel-entity-generator": ">=2.0.4-beta",
     "tightenco/tlint": "^6.3",
