--- a/composer.json
+++ b/composer.json
@@ -9,37 +9,37 @@
   "type": "project",
   "require": {
     "php": "^8.1",
-    "doctrine/dbal": "^3.6",
-    "laravel/framework": "^9.0",
-    "laravel/legacy-factories": "^1.1",
-    "laravel/serializable-closure": "^1.2",
-    "laravel/tinker": "^2.8",
-    "laravel/ui": "^4.2",
-    "maatwebsite/excel": "^3.1.48",
-    "nunomaduro/collision": "^6.1",
-    "php-open-source-saver/jwt-auth": "^2.1",
-    "psr/simple-cache": "^2.0",
+    "doctrine/dbal": "^3.8",
+    "laravel/framework": "^10.48",
+    "laravel/legacy-factories": "^1.4",
+    "laravel/serializable-closure": "^1.3",
+    "laravel/tinker": "^2.9",
+    "laravel/ui": "^4.5",
+    "maatwebsite/excel": "^3.1.55",
+    "nunomaduro/collision": "^6.4",
+    "php-open-source-saver/jwt-auth": "^2.2",
+    "psr/simple-cache": "^3.0",
     "ronasit/laravel-helpers": "^2.5",
-    "ronasit/laravel-swagger": "^2.1",
-    "spatie/laravel-google-cloud-storage": "^2.2",
-    "spatie/laravel-ignition": "^1.0",
-    "symfony/http-client": "6.1.0",
-    "symfony/mailgun-mailer": "6.1.0",
-    "symfony/postmark-mailer": "6.1.0",
+    "ronasit/laravel-swagger": "^2.2",
+    "spatie/laravel-google-cloud-storage": "^2.3",
+    "spatie/laravel-ignition": "^2.4",
+    "symfony/http-client": "6.4.5",
+    "symfony/mailgun-mailer": "6.4.4",
+    "symfony/postmark-mailer": "6.4.4",
     "ext-openssl": "*"
   },
   "require-dev": {
-    "barryvdh/laravel-ide-helper": "^2.13",
+    "ext-json": "*",
+    "barryvdh/laravel-ide-helper": "^3.0",
     "brainmaestro/composer-git-hooks": "v3.0.0-alpha.1",
-    "fakerphp/faker": "^1.19",
+    "fakerphp/faker": "^1.23",
     "friendsofphp/php-cs-fixer": "^3.8",
-    "mockery/mockery": "^1.4",
-    "php-coveralls/php-coveralls": "^2.6",
-    "php-mock/php-mock-phpunit": "^2.7",
-    "phpunit/phpunit": "^9.5.21",
+    "mockery/mockery": "^1.6",
+    "php-coveralls/php-coveralls": "^2.7",
+    "php-mock/php-mock-phpunit": "^2.10",
+    "phpunit/phpunit": "^9.6.17",
     "ronasit/laravel-entity-generator": ">=2.0.4-beta",
-    "tightenco/tlint": "^9.2",
-    "ext-json": "*"
+    "tightenco/tlint": "^9.3"
   },
   "autoload": {
     "classmap": [
