--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "type": "project",
   "require": {
     "php": "^8.1",
+    "ext-openssl": "*",
     "doctrine/dbal": "^3.8",
     "laravel/framework": "^10.48",
     "laravel/legacy-factories": "^1.4",
@@ -19,14 +20,13 @@
     "nunomaduro/collision": "^6.4",
     "php-open-source-saver/jwt-auth": "^2.2",
     "psr/simple-cache": "^3.0",
-    "ronasit/laravel-helpers": "^2.5",
+    "ronasit/laravel-helpers": "^2.6",
     "ronasit/laravel-swagger": "^2.2",
     "spatie/laravel-google-cloud-storage": "^2.3",
     "spatie/laravel-ignition": "^2.4",
     "symfony/http-client": "6.4.5",
     "symfony/mailgun-mailer": "6.4.4",
-    "symfony/postmark-mailer": "6.4.4",
-    "ext-openssl": "*"
+    "symfony/postmark-mailer": "6.4.4"
   },
   "require-dev": {
     "ext-json": "*",
@@ -36,7 +36,6 @@
     "friendsofphp/php-cs-fixer": "^3.8",
     "mockery/mockery": "^1.6",
     "php-coveralls/php-coveralls": "^2.7",
-    "php-mock/php-mock-phpunit": "^2.10",
     "phpunit/phpunit": "^9.6.17",
     "ronasit/laravel-entity-generator": ">=2.0.4-beta",
     "tightenco/tlint": "^9.3"
