--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "^8.1",
+    "php": "^8.2",
     "doctrine/dbal": "^3.8",
     "laravel/framework": "^10.48",
     "laravel/legacy-factories": "^1.4",
@@ -32,12 +32,13 @@
     "ext-json": "*",
     "barryvdh/laravel-ide-helper": "^3.0",
     "brainmaestro/composer-git-hooks": "v3.0.0-alpha.1",
+    "brianium/paratest": "^7.4.3",
     "fakerphp/faker": "^1.23",
     "friendsofphp/php-cs-fixer": "^3.8",
     "mockery/mockery": "^1.6",
     "php-coveralls/php-coveralls": "^2.7",
     "php-mock/php-mock-phpunit": "^2.10",
-    "phpunit/phpunit": "^9.6.17",
+    "phpunit/phpunit": "^10.5.18",
     "ronasit/laravel-entity-generator": ">=2.0.4-beta",
     "tightenco/tlint": "^9.3"
   },
