--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "type": "project",
   "require": {
     "php": "^8.2",
+    "ext-openssl": "*",
     "doctrine/dbal": "^3.8",
     "laravel/framework": "^10.48",
     "laravel/legacy-factories": "^1.4",
@@ -16,7 +17,7 @@
     "laravel/tinker": "^2.9",
     "laravel/ui": "^4.5",
     "maatwebsite/excel": "^3.1.55",
-    "nunomaduro/collision": "^6.4",
+    "nunomaduro/collision": "^7.10",
     "php-open-source-saver/jwt-auth": "^2.2",
     "psr/simple-cache": "^3.0",
     "ronasit/laravel-helpers": "^2.6",
@@ -25,8 +26,7 @@
     "spatie/laravel-ignition": "^2.4",
     "symfony/http-client": "6.4.5",
     "symfony/mailgun-mailer": "6.4.4",
-    "symfony/postmark-mailer": "6.4.4",
-    "ext-openssl": "*"
+    "symfony/postmark-mailer": "6.4.4"
   },
   "require-dev": {
     "ext-json": "*",
