refactor: update mails format

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "nunomaduro/collision": "^6.4",
     "php-open-source-saver/jwt-auth": "^2.2",
     "psr/simple-cache": "^3.0",
-    "ronasit/laravel-helpers": "^2.6",
+    "ronasit/laravel-helpers": "dev-master",
     "ronasit/laravel-swagger": "^2.2",
     "spatie/laravel-google-cloud-storage": "^2.3",
     "spatie/laravel-ignition": "^2.4",
