--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "App\\Tests\\": "tests/",
-      "App\\Modules\\Media\\Tests\\": "app/Modules/Media/tests/"
+      "App\\Tests\\": "tests/"
     }
   },
   "scripts": {
