--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "barryvdh/laravel-ide-helper": "^3.0",
     "brainmaestro/composer-git-hooks": "v3.0.0-alpha.1",
     "fakerphp/faker": "^1.23",
-    "friendsofphp/php-cs-fixer": "^3.8",
+    "laravel/pint": "^1.16",
     "mockery/mockery": "^1.6",
     "php-coveralls/php-coveralls": "^2.7",
     "phpunit/phpunit": "^9.6.17",
