--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,7 @@
         "stop-on-failure": ["pre-commit"]
       },
       "pre-commit": [
-        "docker-compose up -d php && docker-compose exec -T php vendor/bin/php-cs-fixer fix && docker-compose exec -T php vendor/bin/tlint"
+        "docker-compose up -d php && docker-compose exec -T php vendor/bin/pint && docker-compose exec -T php vendor/bin/tlint"
       ]
     }
   },
