--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "^8.2",
+    "php": "^8.3",
     "ext-openssl": "*",
     "laravel/framework": "^11.11",
     "laravel/legacy-factories": "^1.4",
@@ -19,8 +19,8 @@
     "nunomaduro/collision": "^8.1",
     "php-open-source-saver/jwt-auth": "^2.2",
     "psr/simple-cache": "^3.0",
-    "ronasit/laravel-helpers": "dev-laravel-min-version-10.48",
-    "ronasit/laravel-swagger": "dev-update-dependencies",
+    "ronasit/laravel-helpers": "dev-master",
+    "ronasit/laravel-swagger": "dev-master",
     "spatie/laravel-google-cloud-storage": "^2.3",
     "spatie/laravel-ignition": "^2.4",
     "symfony/http-client": "^7.0",
