feat: update project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+/.phpunit.cache
 /node_modules
+/public/build
 /public/hot
 /public/storage
 /storage/*.key
@@ -6,8 +8,10 @@
 /vendor
 /.idea
 /.vagrant
+/.vscode
 Homestead.json
 Homestead.yaml
+auth.json
 npm-debug.log
 yarn-error.log
 .env
