--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
         - 6379:6379
 
   php:
-    image: webdevops/php-nginx-dev:8.3
+    image: webdevops/php:8.3-alpine
     working_dir: /app
     volumes:
       - ./:/app
