--- a/.env.testing
+++ b/.env.testing
@@ -9,8 +9,8 @@ FAIL_EXPORT_JSON=false
 DB_CONNECTION=pgsql
 DB_HOST=pgsql_test
 DB_PORT=5432
-DB_DATABASE=forge
-DB_USERNAME=forge
+DB_DATABASE=postgres
+DB_USERNAME=postgres
 DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
