--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,7 @@
         "stop-on-failure": ["pre-commit"]
       },
       "pre-commit": [
-        "docker-compose up -d php && docker-compose exec -T php vendor/bin/php-cs-fixer fix && docker-compose exec -T php vendor/bin/tlint"
+        "docker compose up -d php && docker compose exec -T php vendor/bin/php-cs-fixer fix && docker compose exec -T php vendor/bin/tlint"
       ]
     }
   },
