--- a/tests/fixtures/InitCommandTest/env.example.yml
+++ b/tests/fixtures/InitCommandTest/env.example.yml
@@ -8,8 +8,8 @@ APP_URL=http://localhost
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=pgdb
-DB_USERNAME=pguser
+DB_DATABASE=postgres
+DB_USERNAME=postgres
 DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
