--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
 
   redis:
     image: bitnami/redis:7.2
+    environment:
+      ALLOW_EMPTY_PASSWORD: yes
     ports:
         - 6379:6379
 
