--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -31,6 +31,13 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      redis:
+        image: redis
+        env:
+          ALLOW_EMPTY_PASSWORD: yes
+        ports:
+            - 6379
+
     steps:
       - uses: shivammathur/setup-php@v2
         with:
