fix: setup redis version for github actions

--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -32,7 +32,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
       redis:
-        image: redis
+        image: redis:7.2
         env:
           ALLOW_EMPTY_PASSWORD: yes
         ports:
