fix: setup redis envs for github actions

--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -34,6 +34,9 @@ jobs:
       redis:
         image: redis:7.2
         env:
+          REDIS_HOST: localhost
+          REDIS_PASSWORD: ""
+          REDIS_PORT: 6379
           ALLOW_EMPTY_PASSWORD: yes
         ports:
           - 6379:6379
