--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -56,6 +56,8 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Execute unit tests via PHPUnit with coverage
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+        env:
+          DB_PORT: ${{ job.services.postgres.ports[5432] }}
       - name: Upload coverage results to Coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
