--- a/.github/workflows/run-tests-with-coverage.yml
+++ b/.github/workflows/run-tests-with-coverage.yml
@@ -23,6 +23,7 @@ jobs:
       postgres:
         image: postgres
         env:
+          DB_PORT: 5432
           POSTGRES_PASSWORD: ""
           POSTGRES_USER: forge
           POSTGRES_DB: forge
@@ -56,8 +57,6 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Execute unit tests via PHPUnit with coverage
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
-        env:
-          DB_PORT: ${{ job.services.postgres.ports[5432] }}
       - name: Upload coverage results to Coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
