--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   nginx:
-    image: webdevops/php-nginx-dev:8.3
+    image: ghcr.io/ronasit/php-nginx-dev:8.3
     working_dir: /app
     command: >
       bash -c "chmod +x ./docker/entrypoint.sh && ./docker/entrypoint.sh && cd /opt/docker && supervisord"
