--- a/composer.json
+++ b/composer.json
@@ -10,26 +10,26 @@
   "require": {
     "php": "^8.3",
     "ext-openssl": "*",
-    "laravel/framework": "^11.11",
+    "laravel/framework": "^11.21",
     "laravel/legacy-factories": "^1.4",
     "laravel/serializable-closure": "^1.3",
     "laravel/tinker": "^2.9",
     "laravel/ui": "^4.5",
     "maatwebsite/excel": "^3.1.55",
-    "nunomaduro/collision": "^8.1",
-    "php-open-source-saver/jwt-auth": "^2.2",
+    "nunomaduro/collision": "^8.4",
+    "php-open-source-saver/jwt-auth": "^2.7",
     "psr/simple-cache": "^3.0",
-    "ronasit/laravel-helpers": "dev-master",
-    "ronasit/laravel-swagger": "dev-master",
+    "ronasit/laravel-helpers": "^3.0.0-beta",
+    "ronasit/laravel-swagger": "^3.0.0-beta",
     "spatie/laravel-google-cloud-storage": "^2.3",
-    "spatie/laravel-ignition": "^2.4",
-    "symfony/http-client": "^7.0",
-    "symfony/mailgun-mailer": "^7.0",
-    "symfony/postmark-mailer": "^7.0"
+    "spatie/laravel-ignition": "^2.8",
+    "symfony/http-client": "^7.1.3",
+    "symfony/mailgun-mailer": "^7.1.3",
+    "symfony/postmark-mailer": "^7.1"
   },
   "require-dev": {
     "ext-json": "*",
-    "barryvdh/laravel-ide-helper": "^3.0",
+    "barryvdh/laravel-ide-helper": "^3.1",
     "codedefective/cg-hooks": "^3.1",
     "fakerphp/faker": "^1.23",
     "friendsofphp/php-cs-fixer": "^3.8",
