--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "mockery/mockery": "^1.6",
     "php-coveralls/php-coveralls": "^2.7",
     "phpunit/phpunit": "^10.5",
+    "ronasit/laravel-entity-generator": "dev-master",
     "tightenco/tlint": "^9.3"
   },
   "autoload": {
